styles.css
* {
  box-sizing: border-box;
}

h1, h2, h3 {
  font-family: 'Slabo 13px', serif;
}

header {
  text-align: center;
  padding: 6%;
  font-size: 1.0em;
}

body {
  text-align: center;
  font-family: 'Lato', sans-serif;
  color: #fff8dc;
  padding: 4%;
  background-color: #272a2a;
  background: 
    /* top, transparent grey */ 
    linear-gradient(
      rgba(0, 0, 0, .8), 
      rgba(0, 0, 0, .8)
    ),
    /* bottom, image */
    url('images/old-newspaper.jpg');
}

input {
  padding: 1%;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 1em;
  color:  darkgrey;
  text-align: left;
  margin-top: 15px;
}

label {
  margin-bottom: 15px;
}

ul {
  list-style: none;
}

li {
  margin-bottom: 15px;
}

a {
  color: #fff8dc;
  text-decoration: none;
  line-height: 1.5em;
  text-align: left;
}

a:hover {
  text-decoration-line: underline;
}

#auto-title {
  height: auto;
}

#date-button {
  display: block;
  margin-left: auto;
  margin-right: auto;
  border: 1px solid #fff8dc;
  background-color: #272a2a;
  color: #fff8dc;
  padding: 2%;
  margin-top: 20px;
  margin-bottom: 20px;
}

#date-button:hover {
  background-color: #fff8dc;
  color: #272a2a;
}

.hidden {
  display: none;
}



#invalid-date {
  text-align: center;
}
.news-display {
  border: 1px solid #fff8dc;
  margin-bottom: 15px;
  background-color: #272a2a;
  padding: 2%;
}

#results-section {
  text-align: left;
  line-height: 1.5em;
  margin-top: 30px;
  border-top: 1px solid #fff8dc;
  border-right: none;
  border-left: none;
  border-bottom: none;
}

#results-title {
  text-align: center;
  margin-bottom: 15px;
}

.slider{
  overflow: hidden;
  height: 100px;
  font-size: 1.5em;
  line-height: 1.5;
}

.slider figure div{
  width: 10%;
  float: left;
}

.slider figure{
  position: relative;
  width: 1000%;
  margin: 0;
  left: 0;
  animation: 35s slidy infinite;
}

@keyframes slidy {
  0%{
    left: 0%
  }

  10%{
    left: 0%;
  }

  11%{
    left: -100%;
  }

  20%{
    left: -100%;
  }

  21%{
    left: -200%;
  }

  30%{
    left: -200%;
  }

  31%{
    left: -300%;
  }

  40%{
    left: -300%;
  }

  41%{
    left: -400%;
  }

  50%{
    left: -400%;
  }

  51%{
    left: -500%;
  }

  60%{
    left: -500%;
  }

  61%{
    left: -600%;
  }

  70%{
    left: -600%;
  }

  71%{
    left: -700%;
  }

  80%{
    left: -700%;
  }

  81%{
    left: -800%;
  }

  90%{
    left: -800%;
  }

  91% {
    left: -900%;
  }

  99% {
    left: -900%;
  }

  100% {
    left: 0%;
  }
}

/* .slide-up {
  height: 100%;
  overflow: hidden;
  animation: 2s slide-up;
  margin-top: 0%;
}

@keyframes slide-up {
  from {
    margin-top: 100%;
    height: 300%; 
  }

  to {
    margin-top: 0%;
    height: 100%;
  }
} */

@media screen and (min-width: 1024px) {
  header {
    padding: 25px;
  }

  #date-button {
    padding: 1%;
  }

  .slide-left {
    width: 100%;
    overflow: hidden;
    animation: slide-left 2s
  }
  
  @keyframes slide-left {
    from {
      margin-left: 100%;
      width: 300%; 
    }
  
    to {
      margin-left: 0%;
      width: 100%;
    }
  }
}

